# V-Minion

./: .gitmodules  404.html  CNAME  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build_docs.yml
bom/: index.html  machine.json  vminion_02062022_1713.csv  vminion_20042023_1212.csv  vminion_21102022_1542.csv
cad/panels/: README.md
cad/panels/DXF/Imperial/: panel_electronics_base_v1.0.dxf  panel_electronics_board_v1.0.dxf  panel_electronics_psu_v1.0.dxf  panel_electronics_top_v1.0.dxf
cad/panels/DXF/Metric/: panel_electronics_base_v1.0.dxf  panel_electronics_board_v1.0.dxf  panel_electronics_psu_v1.0.dxf  panel_electronics_top_v1.0.dxf
cad/panels/STEP/Imperial/: panel_electronics_base_v1.0.step  panel_electronics_board_v1.0.step  panel_electronics_psu_v1.0.step  panel_electronics_top_v1.0.step
cad/panels/STL/: panel_electronics_base_v1.0.stl  panel_electronics_board_v1.0.stl  panel_electronics_psu_v1.0.stl  panel_electronics_top_v1.0.stl
community/: index.html
contribution/: index.html
docs/src/: bom.md  community.md  contribution.md  electronics.md  firmware.md  index.md  printed_parts.md  slicer.md  videos.md
docs/src/bom/: electronics.csv  electronics_case.json  full_bom.csv  machine.json  printed_parts.csv  vminion_07122022_0906.csv  vminion_08022002_1225.csv  vminion_09122022_0939.csv  vminion_26122021_2152.csv
electronics/: index.html
firmware/: index.html
printed_parts/: index.html
search/: search_index.json
slicer/: index.html
src/: plugin.py
(+72 files in other folders)
