[tool.poetry]
name = "V-Minion"
version = "1.0.0"
description = ""
authors = ["Paweł Kucmus <pkucmus@gmail.com>", "Simon Davie <simon@ratrig.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-redirects = "^1.0.1"
mkdocs-awesome-pages-plugin = "^2.5.0"
mkdocs-material = "^8.1.3"
ratrig-productpages = {path = "ratrig-productpages", develop = true}

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
readline = "^6.2.4"
ipdb = "^0.13.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
